// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceSearch Rendering with custom component for button with isListening: false 1`] = `
<Translatable(VoiceSearch)
  buttonComponent={[Function]}
>
  <VoiceSearch
    buttonComponent={[Function]}
    translate={[Function]}
  >
    <div
      className="ais-VoiceSearch"
    >
      <button
        className="ais-VoiceSearch-button"
        disabled={false}
        onClick={[Function]}
        title="Search by voice"
        type="button"
      >
        <customButton>
          Start
        </customButton>
      </button>
      <div
        className="ais-VoiceSearch-status"
      >
        <DefaultStatus>
          <p />
        </DefaultStatus>
      </div>
    </div>
  </VoiceSearch>
</Translatable(VoiceSearch)>
`;

exports[`VoiceSearch Rendering with custom component for button with isListening: true 1`] = `
<Translatable(VoiceSearch)
  buttonComponent={[Function]}
>
  <VoiceSearch
    buttonComponent={[Function]}
    translate={[Function]}
  >
    <div
      className="ais-VoiceSearch"
    >
      <button
        className="ais-VoiceSearch-button"
        disabled={false}
        onClick={[Function]}
        title="Search by voice"
        type="button"
      >
        <customButton
          isListening={true}
        >
          Stop
        </customButton>
      </button>
      <div
        className="ais-VoiceSearch-status"
      >
        <DefaultStatus
          isListening={true}
        >
          <p />
        </DefaultStatus>
      </div>
    </div>
  </VoiceSearch>
</Translatable(VoiceSearch)>
`;

exports[`VoiceSearch Rendering with custom template for status 1`] = `
<Translatable(VoiceSearch)
  statusComponent={[Function]}
>
  <VoiceSearch
    statusComponent={[Function]}
    translate={[Function]}
  >
    <div
      className="ais-VoiceSearch"
    >
      <button
        className="ais-VoiceSearch-button"
        disabled={false}
        onClick={[Function]}
        title="Search by voice"
        type="button"
      >
        <DefaultButton
          isListening={true}
          isSpeechFinal={false}
          status="recognizing"
          transcript="Hello"
        >
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
              fill="currentColor"
            />
            <path
              d="M19 10v2a7 7 0 0 1-14 0v-2"
            />
            <line
              x1="12"
              x2="12"
              y1="19"
              y2="23"
            />
            <line
              x1="8"
              x2="16"
              y1="23"
              y2="23"
            />
          </svg>
        </DefaultButton>
      </button>
      <div
        className="ais-VoiceSearch-status"
      >
        <customStatus
          isListening={true}
          isSpeechFinal={false}
          status="recognizing"
          transcript="Hello"
        >
          <div>
            <p>
              status: 
              recognizing
            </p>
            <p>
              errorCode: 
            </p>
            <p>
              isListening: 
              true
            </p>
            <p>
              transcript: 
              Hello
            </p>
            <p>
              isSpeechFinal: 
              false
            </p>
            <p>
              isBrowserSupported: 
              false
            </p>
          </div>
        </customStatus>
      </div>
    </div>
  </VoiceSearch>
</Translatable(VoiceSearch)>
`;

exports[`VoiceSearch Rendering with default props 1`] = `
<Translatable(VoiceSearch)>
  <VoiceSearch
    translate={[Function]}
  >
    <div
      className="ais-VoiceSearch"
    >
      <button
        className="ais-VoiceSearch-button"
        disabled={false}
        onClick={[Function]}
        title="Search by voice"
        type="button"
      >
        <DefaultButton>
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"
              fill=""
            />
            <path
              d="M19 10v2a7 7 0 0 1-14 0v-2"
            />
            <line
              x1="12"
              x2="12"
              y1="19"
              y2="23"
            />
            <line
              x1="8"
              x2="16"
              y1="23"
              y2="23"
            />
          </svg>
        </DefaultButton>
      </button>
      <div
        className="ais-VoiceSearch-status"
      >
        <DefaultStatus>
          <p />
        </DefaultStatus>
      </div>
    </div>
  </VoiceSearch>
</Translatable(VoiceSearch)>
`;
